[tool.poetry]
name = "mongomock-motor"
version = "0.0.0"
description = "Best effort mock for AsyncIOMotorClient built on top of mongomock library."
authors = ["Michael Kryukov <mkrukov@bestplace.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mongomock = "^4.1.2"

[tool.poetry.group.dev.dependencies]
anyio = "^3.5.0"
beanie = "^1.21.0"
mongo-thingy = "^0.15.1"
pytest = "^7.0.0"
ruff = "^0.2.0"
umongo = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
